[package]
name = "str-bin"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"

[dependencies.clap]
version = "3.1.0"
default-features = false
features = ["std", "color", "derive"]
